Changing out unwanted questions and adding fast-money questions.

--- a/_questions/010.md
+++ b/_questions/010.md
@@ -2,15 +2,15 @@
 layout: question
 title: question-010
 number: 10
-question: Name a famous wizard.
-answer1: Harry Potter | 37
-answer2: Merlin | 26
-answer3: Gandalf | 11
-answer4: Dr. Strange | 9
-answer5: The Wizard of Oz | 8
-answer6: Voldemort | 3
-answer7: Newt Scamander | 2
-answer8:
+question: Name a reason people prefer summer to winter.
+answer1: Warm weather | 39
+answer2: Wear lighter clothes | 17
+answer3: More activities | 10
+answer4: Beach | 10
+answer5: Fun | 6
+answer6: No snow | 4
+answer7: Go swimming | 3
+answer8: Feel happier | 2
 answer9:
 answer10:
 ---
