--- a/_questions/016.md
+++ b/_questions/016.md
@@ -2,15 +2,15 @@
 layout: question
 title: question-016
 number: 16
-question: Name a Harry Potter character.
-answer1: Harry Potter | 52
-answer2: Hermione | 16
-answer3: Ron | 14
-answer4: Fred/George | 5
-answer5: Newt Scamander | 5
-answer6: Dumbledore | 3
-answer7: Snape | 2
-answer8: Hagrid | 2
+question: Besides lunching, name something people do during their lunch hour.
+answer1: Sleep/Nap | 6
+answer2: Exercise | 18
+answer3: Read | 16
+answer4: Shop | 13
+answer5: Go to the bank | 11
+answer6: Use cell phone | 8
+answer7:
+answer8:
 answer9:
 answer10:
 ---
