--- a/_questions/023.md
+++ b/_questions/023.md
@@ -2,15 +2,15 @@
 layout: question
 title: question-023
 number: 23
-question: After you take a selfie, who might you send it to?
-answer1: Spouse/Partner | 22
-answer2: Parent | 20
-answer3: Aunt/Grandparent | 16
-answer4: Friend | 15
-answer5: Facebook/Social media | 8
-answer6: Government | 5
-answer7: Stranger | 2
-answer8:
+question: Name something you have that a neighbor might try to borrow.
+answer1: Sugar | 26
+answer2: Lawn mower | 18
+answer3: Ladder | 13
+answer4: Shovel | 10
+answer5: Tools | 8
+answer6: Hammer | 7
+answer7: Phone | 5
+answer8: Snow blower | 3
 answer9:
 answer10:
 ---
