--- a/_questions/032.md
+++ b/_questions/032.md
@@ -2,15 +2,15 @@
 layout: question
 title: question-032
 number: 32
-question: Name an older actor who is in a lot of movies.
-answer1: Tom Cruise | 19
-answer2: Dwayne "The Rock" Johnson | 17
-answer3: Tom Hanks | 15
-answer4: John Wayne | 13
-answer5: Clint Eastwood | 13
-answer6: Harrison Ford | 7
-answer7:
-answer8:
-answer9:
+question: Name your favorite activity for burning calories.
+answer1: Walking | 24
+answer2: Running | 20
+answer3: Swimming | 16
+answer4: Bike riding | 9
+answer5: Aerobics | 7
+answer6: Basketball | 6
+answer7: Tennis | 5
+answer8: Cardio | 3
+answer9: Dancing | 2
 answer10:
 ---
