--- a/_questions/036.md
+++ b/_questions/036.md
@@ -2,15 +2,15 @@
 layout: question
 title: question-036
 number: 36
-question: Name a metal old coins might be made out of.
-answer1: Silver | 29
-answer2: Gold | 25
-answer3: Copper | 20
-answer4: Bronze | 18
-answer5: Zinc | 4
-answer6: Steel | 2
-answer7:
-answer8:
+question: Name a food that comes in the shape of a ring.
+answer1: Onions | 27
+answer2: Doughnut | 19
+answer3: Cheerios | 16
+answer4: Hamburger | 9
+answer5: Pancakes | 7
+answer6: Pizza | 6
+answer7: Cookies | 4
+answer8: Life savers | 1
 answer9:
 answer10:
 ---
