--- a/_questions/041.md
+++ b/_questions/041.md
@@ -2,15 +2,15 @@
 layout: question
 title: question-041
 number: 41
-question: Name a country with a lot of land.
-answer1: Russia | 31
-answer2: China | 17
-answer3: Canada | 17
-answer4: USA | 16
-answer5: Greenland | 5
-answer6: Mexico | 4
-answer7: Australia | 4
-answer8: India | 2
+question: Name a word or phrase that starts with the word "Pop."
+answer1: Goes the weasel | 42
+answer2: Corn | 23
+answer3: Tart | 15
+answer4: Star | 11
+answer5:
+answer6:
+answer7:
+answer8:
 answer9:
 answer10:
 ---
