--- a/_questions/056.md
+++ b/_questions/056.md
@@ -2,14 +2,14 @@
 layout: question
 title: question-056
 number: 56
-question: Name a downside of biking to work.
-answer1: Takes longer | 28
-answer2: Tired | 25
-answer3: Stinky at work | 17
-answer4: More dangerous/accidents | 10
-answer5: Harder to carry things | 6
-answer6: Look silly | 5
-answer7: Worry about bike/theft | 3
+question: Name a place that has assigned seating.
+answer1: School | 28
+answer2: Concert | 26
+answer3: Airplane | 14
+answer4: Sporting event | 12
+answer5:
+answer6:
+answer7:
 answer8:
 answer9:
 answer10:
