--- a/_questions/069.md
+++ b/_questions/069.md
@@ -2,15 +2,15 @@
 layout: question
 title: question-069
 number: 69
-question: Name a type of insurance.
-answer1: Car | 28
-answer2: Health/Dental | 22
-answer3: Life | 15
-answer4: Home | 10
-answer5: Renter's | 8
-answer6: Flood | 6
-answer7: Travel | 4
-answer8: Blackjack | 2
+question: Name a something people have trouble controlling.
+answer1: Temper | 27
+answer2: Money | 15
+answer3: Weight | 10
+answer4: Appetite | 9
+answer5: Kids | 9
+answer6: Weather | 8
+answer7: Smoking | 5
+answer8: Mouth | 4
 answer9:
 answer10:
 ---
