--- a/_questions/021.md
+++ b/_questions/021.md
@@ -2,14 +2,14 @@
 layout: question
 title: question-021
 number: 21
-question: Tell me a type of gun that doesn't shoot bullets
-answer1: Nail gun | 23
-answer2: Stun gun | 21
-answer3: Water gun | 18
-answer4: BB gun | 14
-answer5: Biceps/Muscles | 8
-answer6: Paintball gun | 2
-answer7: Son of a gun | 2
+question: "Complete this sentence: The true measure of success is having a great _____."
+answer1: Family | 29
+answer2: Life | 13
+answer3: Bank account | 10
+answer4: Attitude | 10
+answer5: Job/Career | 6
+answer6: Time | 4
+answer7:
 answer8:
 answer9:
 answer10:
