--- a/_questions/024.md
+++ b/_questions/024.md
@@ -2,13 +2,13 @@
 layout: question
 title: question-024
 number: 24
-question: Name a plant people might grow themselves.
-answer1: Tomatoes | 33
-answer2: Flowers/Roses | 31
-answer3: Apples | 14
-answer4: Zucchini | 7
-answer5: Plums | 4
-answer6: Grass/Pot | 3
+question: Give a phrase that starts with the word "Happy."
+answer1: Birthday | 38
+answer2: New Year | 16
+answer3: Anniversary | 14
+answer4: Days | 10
+answer5: Meal | 9
+answer6: Go lucky | 8
 answer7:
 answer8:
 answer9:
